# realestate-ml

./: .gitignore  pyproject.toml
config/: train.yaml
notebooks/01_eda/: 01_data_exploration.ipynb  02_data_cleaning.ipynb
notebooks/02_feature_engineering/: 01_feature_engineering.ipynb  02_data_preprocessing.ipynb
notebooks/03_modeling/: 01_model_experiments.ipynb  02_hyperparameter_tuning.ipynb
notebooks/04_evaluation/: 01_final_evaluation.ipynb
src/realestate_ml/: __init__.py  config.py  logging_config.py
src/realestate_ml/data/: __init__.py  cleaner.py  interfaces.py  loader.py  validator.py
src/realestate_ml/features/: __init__.py  data_preprocessor.py  feature_engineering.py
src/realestate_ml/models/: __init__.py  evaluator.py  predictor.py  trainer.py
tests/: conftest.py
tests/unit/data/: test_cleaner.py  test_loader.py  test_validator.py
tests/unit/features/: test_data_preprocessor.py  test_feature_engineering.py
tests/unit/models/: test_evaluator.py  test_predictor.py  test_trainer.py
