[project]
name = "realestate-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anas Khan", email = "anaskhanx101@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
realestate-ml = "realestate_ml:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
