[project]
name = "realestate-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anas Khan", email = "anaskhanx101@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]

[project.scripts]
realestate-ml = "realestate_ml:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
